# trajectory-monitor

./: .gitignore  ACTIVE.md  PRD.md  PRIORITIES.md  README.md  ROADMAP.md  package.json  pyproject.toml
samples/: crash-session.json  hallucination-session.json  loop-session.json  normal-session.json  stagnation-session.json  timeout-session.json
src/: detector.js  index.js  parser.js  reporter.js  scorer.js
src/trajectory_monitor/: __init__.py  __main__.py  cli.py  mcp_server.py  parser.py  recommendations.py  report.py  scorer.py  signals.py
tests/: advanced.test.js  detector.test.js  integration.test.js  parser.test.js  reporter.test.js  scorer.test.js  test_analyze_openclaw.py  test_hallucination.py  test_mcp_server.py  test_recommendations.py  test_trajectory_monitor.py  test_trends.py
tools/: analyze_openclaw.py
